--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>dev.snowdrop</groupId>
+  <groupId>com.github.jg513</groupId>
   <artifactId>vertx-spring-boot-parent</artifactId>
   <packaging>pom</packaging>
   <version>1.0.1-SNAPSHOT</version>
@@ -21,7 +21,8 @@
   <scm>
     <url>https://github.com/snowdrop</url>
     <connection>scm:git:https://github.com/snowdrop/vertx-spring-boot.git</connection>
-    <developerConnection>scm:git:git:@github.com:snowdrop/vertx-spring-boot.git</developerConnection>
+    <developerConnection>scm:git:git:@github.com:snowdrop/vertx-spring-boot.git
+    </developerConnection>
     <tag>HEAD</tag>
   </scm>
 
@@ -51,7 +52,7 @@
     <awaitility.version>4.0.2</awaitility.version>
     <scala-library.version>2.12.8</scala-library.version>
     <smallrye-axle.version>0.0.14</smallrye-axle.version>
-    <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
+    <spring-boot.version>2.3.1.RELEASE</spring-boot.version>
     <vertx.version>3.8.5</vertx.version>
 
     <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
@@ -268,6 +269,7 @@
     <module>vertx-spring-boot-starter-actuator</module>
     <module>vertx-spring-boot-starter-http</module>
     <module>vertx-spring-boot-starter-http-test</module>
+    <module>vertx-spring-boot-starter-rsocket</module>
     <module>vertx-spring-boot-starter-mail</module>
     <module>vertx-spring-boot-starter-amqp</module>
     <module>vertx-spring-boot-starter-postgres</module>
