--- a/vertx-spring-boot-samples/vertx-spring-boot-sample-kafka/pom.xml
+++ b/vertx-spring-boot-samples/vertx-spring-boot-sample-kafka/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>dev.snowdrop</groupId>
+    <groupId>com.github.jg513</groupId>
     <artifactId>vertx-spring-boot-samples</artifactId>
     <version>1.0.1-SNAPSHOT</version>
   </parent>
@@ -12,17 +12,17 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>dev.snowdrop</groupId>
+        <groupId>com.github.jg513</groupId>
         <artifactId>vertx-spring-boot-starter-http</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>dev.snowdrop</groupId>
+        <groupId>com.github.jg513</groupId>
         <artifactId>vertx-spring-boot-starter-kafka</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>dev.snowdrop</groupId>
+        <groupId>com.github.jg513</groupId>
         <artifactId>vertx-spring-boot-starter-http-test</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -32,18 +32,18 @@
   <dependencies>
     <!-- Vert.x WebFlux starter used to handle HTTP requests -->
     <dependency>
-      <groupId>dev.snowdrop</groupId>
+      <groupId>com.github.jg513</groupId>
       <artifactId>vertx-spring-boot-starter-http</artifactId>
     </dependency>
     <!-- Vert.x Kafka starter used to send and receive messages to/from Kafka cluster -->
     <dependency>
-      <groupId>dev.snowdrop</groupId>
+      <groupId>com.github.jg513</groupId>
       <artifactId>vertx-spring-boot-starter-kafka</artifactId>
     </dependency>
 
     <!-- Test dependencies -->
     <dependency>
-      <groupId>dev.snowdrop</groupId>
+      <groupId>com.github.jg513</groupId>
       <artifactId>vertx-spring-boot-starter-http-test</artifactId>
       <scope>test</scope>
     </dependency>
