--- a/vertx-spring-boot-starter-postgres/pom.xml
+++ b/vertx-spring-boot-starter-postgres/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>dev.snowdrop</groupId>
+    <groupId>com.github.jg513</groupId>
     <artifactId>vertx-spring-boot-parent</artifactId>
     <version>1.0.1-SNAPSHOT</version>
   </parent>
@@ -21,7 +21,7 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>dev.snowdrop</groupId>
+        <groupId>com.github.jg513</groupId>
         <artifactId>vertx-spring-boot-starter</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -39,7 +39,7 @@
       <artifactId>smallrye-axle-pg-client</artifactId>
     </dependency>
     <dependency>
-      <groupId>dev.snowdrop</groupId>
+      <groupId>com.github.jg513</groupId>
       <artifactId>vertx-spring-boot-starter</artifactId>
     </dependency>
     <dependency>
